# automated-actions

./: .gitignore  .regal.yaml  AGENT.md  CHANGELOG.md  Dockerfile  Dockerfile.cli  Dockerfile.client  Dockerfile.integration_tests  Dockerfile.opa  LICENSE  Makefile  README.md  actions.md  app.sh  compose.yml  docker-compose.yml  pyproject.toml  settings.md
.claude/: settings.local.json
.claude/commands/: create-test.md
.tekton/: automated-actions-cli-main-pull-request.yaml  automated-actions-cli-main-push.yaml  automated-actions-client-main-pull-request.yaml  automated-actions-client-main-push.yaml  automated-actions-main-pull-request.yaml  automated-actions-main-push.yaml  integration-tests-main-pull-request.yaml  integration-tests-main-push.yaml  main-pull-request.yaml  main-push.yaml  opa-main-pull-request.yaml  opa-main-push.yaml
automated_actions/: __main__.py  config.py
automated_actions_cli/: pyproject.toml
automated_actions_cli/automated_actions_cli/: __main__.py  cli.py  config.py
automated_actions_client/: pyproject.toml
automated_actions_client/automated_actions_client/models/: action.py  http_validation_error.py  noop_param.py  validation_error.py
dashboards/: logs-dashboard.yaml  metrics-dashboard.yaml
dev/: roles.json  roles.yml
docs/development-guides/: implementing-new-actions.md
localstack/: init-s3.sh  init-sqs.sh
openapi_python_client_templates/: client.py.jinja  endpoint_module.py.jinja  typer_command.py.jinja
openshift/: integration-tests.yaml  no-op-cronjob.yaml  template.yaml
tests/: test_main.py
(+4 files in other folders)
