[project]
name = "automated-actions-project"
version = "0.1.0"
description = "Automated Actions Project"
authors = [{ name = "AppSRE", email = "sd-app-sre@redhat.com" }]
license = { text = "Apache 2.0" }

[tool.uv.sources]
automated-actions = { workspace = true }
automated-actions-client = { workspace = true }
automated-actions-cli = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/automated_actions",
    "packages/automated_actions_client",
    "packages/automated_actions_cli",
    "packages/integration_tests",
]
